# second-brain

./: .coverage  .dockerignore  .env  .env.development  .env.example  .env.local.template  .env.staging  .env.test  .gitconfig.no-coauthor  .gitignore  .gitmessage  .pre-commit-config.yaml  .venv_optimize.sh  CHANGELOG.md  CHANGELOG_v2.6.0.md  CHECK_GITHUB_PAGES.md  CI_CD_INTEGRATION_SUMMARY.md  CLAUDE.md  CLEANUP_SUMMARY.md  CODE_ANALYSIS_REPORT.md  CODE_OF_CONDUCT.md  COMPLETION_SUMMARY.md  COMPREHENSIVE_CODE_REVIEW_RESULTS.md  COMPREHENSIVE_STUB_ANALYSIS.md  CONTRIBUTING.md  CUsersdrosecond-brain.env.example  DEPENDENCY_ANALYSIS_REPORT.md  DEPENDENCY_AUDIT.md  DEVELOPMENT_CONTEXT.md  DIRECTORY_STRUCTURE.md  Dockerfile  Dockerfile.multimodal  Dockerfile.performance  FOLDER_STRUCTURE_CLEANUP.md  GDRIVE_SETUP.md  GITHUB_RELEASE_INSTRUCTIONS.md  GIT_VISUALIZATION_SUMMARY.md  GOOGLE_DRIVE_SETUP.md  GOOGLE_OAUTH_FIX.md  GOOGLE_OAUTH_SETUP.md  (+165 more)
.claude/: STARTUP_CHECK_IMPLEMENTATION_SUMMARY.md  claude.json  config-v2-secure.yml  config.yml  settings.json  settings.local.json  shell-utils.sh  startup-check-state.json  startup-check.yml
.github/: dependabot.yml
.nova/: Configuration.json
alembic/: env.py
api/: api_v1.py  ws.py
app/: __init__.py  app.py  app_broken.py  app_minimal.py  auth.py  batch_classification_engine.py  batch_classification_engine_old.py  batch_processor.py  bulk_memory_manager.py  bulk_memory_operations.py  bulk_memory_operations_advanced.py  bulk_monitoring_analytics.py  bulk_performance_optimizer.py  bulk_validation_safety.py  config.py  connection_pool.py  connection_pool_broken.py  conversation_processor.py  cross_memory_relationships.py  dashboard.py  dashboard_api.py  dashboard_migrations.py  database.py  database_importance_schema.py  database_migrations.py  database_mock.py  database_new.py  dependencies.py  dependencies_new.py  docs.py  enhanced_dashboard.py  factory.py  handlers.py  importance_engine.py  isolate_test.py  logger.py  main.py  main_simple.py  memory_deduplication_engine.py  memory_migration_tools.py  (+16 more)
config/: requirements-ci-cd.txt  requirements-ci.txt  requirements-consolidated.txt  requirements-dev.txt  requirements-gdrive.txt  requirements-multimodal.txt  requirements-production.txt  requirements-v3.txt  requirements.txt
data/: cipher.db-shm  cipher.db-wal  memories.json  mock_memories.json
demos/: __init__.py  demo_bulk_operations.py  demo_core_extraction.py  demo_dashboard.py  demo_importance.py  demo_infrastructure.py  demo_session_persistence.py
dev-tools/: development_status.py  git_demo.py
docker/: Dockerfile  docker-compose.gdrive.yml
docs/: AI_INSIGHTS_GUIDE.md  API_DOCUMENTATION_INDEX.md  API_GUIDE.md  API_REFERENCE_SYNTHESIS_ADVANCED.md  API_SPECIFICATION_v2.8.2.md  API_SPECIFICATION_v2.8.3.md  API_SPECIFICATION_v3.0.0.md  API_USAGE_EXAMPLES.md  API_V2_UNIFIED_SPECIFICATION.md  API_v2.8.2.md  ARCHITECTURE.md  ARCHITECTURE_ANALYSIS.md  ARCHITECTURE_DESIGN_PATTERNS.md  ARCHITECTURE_V3.md  AUTOMATION_GUIDE.md  BATCH_CLASSIFICATION.md  CHANGELOG.md  CHANGE_AUDIT.md  CICD_PIPELINE.md  CIPHER_INTEGRATION_GUIDE.md  CIPHER_SETUP.md  CIPHER_USAGE_GUIDE.md  CI_CACHING.md  CI_CD_COMPREHENSIVE_GUIDE.md  CI_CD_DEVELOPER_QUICK_REFERENCE.md  CI_CD_DOCUMENTATION_SUMMARY.md  CI_CD_GUIDE.md  CI_CD_GUIDE_V3.md  CI_CD_NAMING_CONVENTIONS_INTEGRATION.md  CI_CD_TESTING_STRATEGY.md  CI_CD_TROUBLESHOOTING_GUIDE.md  CI_CD_WORKFLOW_DOCUMENTATION.md  CODE_ANALYSIS_REPORT.md  CONCEPT_PIPELINE.md  CONTRIBUTING.md  CONTRIUBUTING.md  DASHBOARD_DEPLOYMENT.md  DATA_VIZ.md  DEPLOYMENT-v1.md  DEPLOYMENT.md  (+60 more)
electron/: jest.config.js  jest.localstorage.js  main.js  package-lock.json  package.json  playwright.config.js  preload.js  renderer.html  renderer.js
examples/: __init__.py  granular_error_handling.py  modernized_memory_service_example.py  simple_bulk_test.py  simple_demo.py  test_dashboard.py  test_server.py
frontend/: README.md  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
k8s/: single-user-deployment.yaml
migrations/: 001_add_user_preferences.py  002_migrate_memory_importance.py  003_add_search_analytics.py  004_add_synthesis_tables.sql  MIGRATION_GUIDE_v2.8.3.md  README.md  add_knowledge_graph_tables.sql  add_synthesis_tables.sql  add_synthesis_tables_sqlite.sql  env.py
monitoring/: prometheus.yml
multimodal/: api.py  database.py  models.py  processing.py  requirements.txt  schema.sql
nginx/: staging.conf
qdrant_data/: raft_state.json
results/: production_test_results.json
scripts/: README.md  VERSIONBUMP.bat  VERSIONBUMP.ps1  VERSION_BUMP.ps1  add_pytest_markers.py  analyze_dependencies.py  analyze_file_usage.py  archive_unused_files.py  benchmark_v42.py  bump_version.py  check_secrets.py  ci_checks_no_deps.py  ci_runner.py  ci_test_runner.py  cipher-mcp-warp.sh  cipher-warp-server.js  cipher_helper.py  cipher_mcp_server.py  cleanup_folder_structure.py  cleanup_pre_v3.py  cleanup_unused_routes.py  consolidate_test_results.py  create_hybrid_search.sql  create_stub_services.py  demo_versionbump.py  deploy_staging.bat  deploy_staging.sh  deploy_user_brain.py  deployment_health_check.py  dev  download_nltk_data.py  final_app_fix.py  final_cleanup.py  find_code_smells.py  find_restore_all_dependencies.py  fix_all_imports.py  fix_all_route_imports.py  fix_all_self_imports.py  fix_auth_dependencies.py  fix_bare_except.py  (+83 more)
sql/: gdrive_schema.sql
src/: __init__.py  main.py
static/: api-docs.html  api-documentation.html  architecture_options.html  dashboard.html  dashboard_gruvbox_dark.html  dashboard_light.html  favicon-demo.html  gdrive-ui.html  gdrive.py  git_dashboard.html  index.html  ingestion-dashboard.html  insights-dashboard.html  knowledge-graph.html  library.html  manifest.json  memory_visualization.html  memory_visualization_demo.html  mobile.html  monitoring_dashboard.html  tufte_dashboard.html
temp_backup/: RELEASE_NOTES_v2.8.2.md  __init__.py  synthesis_routes.py
tests/: CI_TEST_INFRASTRUCTURE_SUMMARY.md  INGESTION_TESTS_SUMMARY.md  README.md  TESTING_GUIDELINES.md  (+33 more)
(+1180 files in other folders)
