[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "secondbrain"
version = "4.2.2"
description = "A production-ready personal knowledge management system"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Second Brain Team", email = "team@secondbrain.ai"},
]
maintainers = [
    {name = "Second Brain Team", email = "team@secondbrain.ai"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "asyncpg>=0.29.0",
    "redis>=5.0.0",
    "httpx>=0.25.0",
    "python-multipart>=0.0.6",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "emails>=0.6",
    "celery>=5.3.0",
    "opentelemetry-api>=1.21.0",
    "opentelemetry-sdk>=1.21.0",
    "opentelemetry-instrumentation-fastapi>=0.42b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.42b0",
    "opentelemetry-exporter-otlp>=1.21.0",
    "prometheus-client>=0.19.0",
    "structlog>=23.2.0",
    "orjson>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-xdist>=3.5.0",
    "black>=23.12.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "bandit>=1.7.0",
    "safety>=2.3.0",
    "pre-commit>=3.5.0",
    "ipdb>=0.13.0",
    "ipython>=8.18.0",
    "rich>=13.7.0",
    "typer>=0.9.0",
    "watchdog>=3.0.0",
]
ci = [
    # Enhanced testing framework
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
    "pytest-timeout>=2.2.0",
    "pytest-mock>=3.12.0",
    "pytest-benchmark>=4.0.0",
    "pytest-html>=4.1.1",
    "pytest-json-report>=1.5.0",
    "pytest-rerunfailures>=12.0",
    # Code quality and security
    "ruff>=0.1.8",
    "black>=23.12.0",
    "isort>=5.13.2",
    "mypy>=1.8.0",
    "bandit[toml]>=1.7.5",
    "safety>=2.3.5",
    "semgrep>=1.52.0",
    "pip-audit>=2.6.2",
    "pre-commit>=3.6.0",
    # License compliance
    "pip-licenses>=4.3.3",
    "licensecheck>=2023.3.1",
    # Performance testing
    "locust>=2.18.3",
    "memory-profiler>=0.61.0",
    "py-spy>=0.3.14",
    "psutil>=5.9.6",
    # HTTP testing
    "aiohttp>=3.9.1",
    "httpx>=0.25.2",
    "requests>=2.31.0",
    # Database testing
    "fakeredis>=2.20.1",
    # Container testing
    "docker>=6.1.3",
    # Monitoring
    "prometheus-client>=0.19.0",
    "structlog>=23.2.0",
    # Reporting
    "jinja2>=3.1.2",
    "markdown>=3.5.1",
    "pygments>=2.17.2",
    "tabulate>=0.9.0",
    # Utilities
    "click>=8.1.7",
    "rich>=13.7.0",
    "tqdm>=4.66.1",
    "colorama>=0.4.6",
    "python-dotenv>=1.0.0",
    # Data analysis
    "pandas>=2.1.4",
    "numpy>=1.25.2",
    "matplotlib>=3.8.2",
    # Configuration
    "pyyaml>=6.0.1",
    "jsonschema>=4.20.0",
    # Async utilities
    "aiofiles>=23.2.1",
    # Version management
    "packaging>=23.2",
    "semantic-version>=2.10.0",
]
ml = [
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "transformers>=4.36.0",
    "torch>=2.1.0",
    "sentence-transformers>=2.2.0",
    "qdrant-client>=1.7.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
]

[project.urls]
Homepage = "https://github.com/secondbrain/secondbrain"
Documentation = "https://docs.secondbrain.ai"
Repository = "https://github.com/secondbrain/secondbrain"
Issues = "https://github.com/secondbrain/secondbrain/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "tests*"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.json", "*.html", "*.css", "*.js"]

# Black configuration
[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# Ruff configuration
[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "YTT", # flake8-2020
    "ANN", # flake8-annotations
    "S",   # flake8-bandit
    "BLE", # flake8-blind-except
    "FBT", # flake8-boolean-trap
    "A",   # flake8-builtins
    "COM", # flake8-commas
    "C4",  # flake8-comprehensions
    "DTZ", # flake8-datetimez
    "T10", # flake8-debugger
    "ISC", # flake8-implicit-str-concat
    "ICN", # flake8-import-conventions
    "G",   # flake8-logging-format
    "INP", # flake8-no-pep420
    "PIE", # flake8-pie
    "PT",  # flake8-pytest-style
    "Q",   # flake8-quotes
    "RSE", # flake8-raise
    "RET", # flake8-return
    "SLF", # flake8-self
    "SIM", # flake8-simplify
    "TID", # flake8-tidy-imports
    "TCH", # flake8-type-checking
    "ARG", # flake8-unused-arguments
    "PTH", # flake8-use-pathlib
    "ERA", # eradicate
    "PD",  # pandas-vet
    "PGH", # pygrep-hooks
    "PL",  # Pylint
    "TRY", # tryceratops
    "NPY", # NumPy-specific rules
    "RUF", # Ruff-specific rules
]
ignore = [
    "ANN101",  # Missing type annotation for self
    "ANN102",  # Missing type annotation for cls
    "ANN401",  # Dynamically typed expressions (Any)
    "S101",    # Use of assert detected
    "PLR0913", # Too many arguments
    "PLR2004", # Magic value used in comparison
]
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "__pypackages__",
    "build",
    "dist",
]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101", "PLR2004", "ANN"]
"migrations/*" = ["ALL"]

[tool.ruff.isort]
known-first-party = ["src", "tests"]

[tool.ruff.mccabe]
max-complexity = 10

# Mypy configuration
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
ignore_missing_imports = true
show_error_codes = true
show_column_numbers = true
pretty = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

# Pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--tb=short",
    "--cov=app",
    "--cov-branch",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html:htmlcov",
    "--cov-report=xml:coverage.xml",
    "--cov-report=json:coverage.json",
    "--cov-fail-under=80",
    "--maxfail=10",
    "--timeout=300",
]
markers = [
    # Test categories
    "unit: Unit tests - fast, isolated, no external dependencies",
    "integration: Integration tests - service interactions, database, API",
    "validation: Validation tests - environment health, imports, basic functionality",
    "comprehensive: Comprehensive tests - full workflows, edge cases",
    "performance: Performance tests - benchmarks, load testing",
    # Test characteristics
    "slow: Slow tests (>10s) - deselect with '-m \"not slow\"'",
    "fast: Fast tests (<5s) - select with '-m fast'",
    "smoke: Smoke tests - critical path validation",
    # Environment requirements
    "requires_db: Tests requiring database connection",
    "requires_redis: Tests requiring Redis connection",
    "requires_api_key: Tests requiring API keys (OpenAI, Anthropic)",
    "requires_docker: Tests requiring Docker runtime",
    # CI/CD stages
    "ci_smoke: CI smoke test stage",
    "ci_fast: CI fast feedback stage",
    "ci_comprehensive: CI comprehensive validation stage",
    "ci_performance: CI performance testing stage",
]
asyncio_mode = "auto"
timeout = 300
filermode = "w"
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(name)s: %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

# Coverage configuration
[tool.coverage.run]
source = ["app"]
branch = true
parallel = true
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/__init__.py",
    "*/venv/*",
    "*/.venv/*",
    "*/archive/*",
    "*/scripts/*",
    "*/examples/*",
    "*/demos/*",
    "*/dev-tools/*",
    "*/cipher/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*Protocol:",
    "@abstractmethod",
    "@overload",
    "# pragma: no cover",
    "# nocov",
]

[tool.coverage.html]
directory = "htmlcov"

# Bandit configuration
[tool.bandit]
exclude_dirs = ["tests", "migrations"]
skips = ["B101"]  # assert_used